# auto-events

./: .gitignore  Readme.md
.github/workflows/: main.yml
backend/: .env_template  .gitignore  Dockerfile  docker-compose-dev.yml  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4a409af02efb_add_event_picture.py  92d58bf31542_add_event_owner.py  a40047626bbf_init_tables.py
backend/app/auth/: auth_router.py  auth_schemas.py  auth_service.py
backend/app/database/: database.py  uow.py
backend/app/event/: event_filter.py  event_repository.py  event_router.py  event_schemas.py  event_service.py
backend/app/file/: file_router.py  file_service.py
backend/app/user/: user_repository.py  user_schemas.py  user_service.py  users_router.py
backend/app/utils/: base_filter.py  check_file.py  dependencies.py  di.py  exceptions.py  logging.py  pagination.py
backend/app/venue/: venue_filter.py  venue_repository.py  venue_router.py  venue_schemas.py  venue_service.py
docs/: 206.js  206.js.map  385.js  385.js.map  736.js  843.js  843.js.map  composeApp.js  composeApp.js.map  index.html
docs/composeResources/auto_events_client.core.ui.generated.resources/drawable/: ic_all.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_calendar.xml  ic_calendar_filled.xml  ic_chevron_down.xml  ic_chevron_left.xml  ic_chevron_up_down.xml  ic_circle_arrow_down.xml  ic_circle_arrow_left.xml  ic_circle_arrow_up.xml  ic_close.xml  ic_edit.xml  ic_eye.xml  ic_history.xml  ic_location.xml  ic_pin_filled.xml  ic_profile.xml  ic_search.xml  (+2 more)
frontend/auto-events-client/: gradle.properties  settings.gradle.kts
frontend/auto-events-client/composeApp/: build.gradle.kts
frontend/auto-events-client/docs/: 736.js.map  composeApp.js
frontend/auto-events-client/gradle/: libs.versions.toml
(+231 files in other folders)
